--- a/src/styles.css
+++ b/src/styles.css
@@ -103,7 +103,7 @@ section {
 body {
   line-height: 1;
 }
-ol,
+
 ul {
   list-style: none;
 }
@@ -789,6 +789,8 @@ a {
   margin-right: 0;
   float: left;
 }
+
+
 @media screen and (min-width: 40em) {
   .medium-1 {
     width: 4.16667%;
@@ -5911,7 +5913,9 @@ body {
   margin-bottom: 25px;
   font-weight: 500;
 }
-
+.list-number{
+  padding:0 15px;
+margin: 0;}
 .text-item {
   font-size: large;
 }
@@ -5956,6 +5960,10 @@ body {
 .social-svg{
   stroke: #06AA48;
   fill: #0dca54;
+}
+
+header{
+  position: fixed;
 }
 
 @media (min-width: 1065px) {
