--- a/src/partials/burger.html
+++ b/src/partials/burger.html
@@ -1,11 +1,11 @@
 <nav
 id="menu-container"
 class="menu-container"
-style="display: none"
+
 >
 <div
   id="menu-rounder"
-  class="menu-rounder menu-initial"
+  class="menu-rounder "
 >
   <div
     id="menu-cascade"
@@ -1418,6 +1418,10 @@ style="display: none"
           class="menu-item-link menu-link menu-navegacao-color-primary"
         >
           <span class="menu-item-title">Jogos</span>
+          <div class="glb-item-badge glb-item-badge--warning glb-item-badge--with-submenu">
+            <div class="glb-item-badge_icon"></div>
+            <div class="glb-item-badge_label">NOVO</div>
+          </div>
           <span
             class="menu-item-arrow menu-navegacao-color-primary"
           ></span>
@@ -13684,5 +13688,4 @@ style="display: none"
   ></div>
 </div>
 </nav>
-
-<div id="menu-content-overlay"></div>
+<div id="menu-content-overlay" class="menu-content-overlay"></div>
